# mini_proyecto_next-e

./: .gitignore  README.md  data_study.ipynb  data_study2.ipynb  pyproject.toml  requirements.txt  sample.env  serverless.yml
src/: config.py  endpoints.py  main.py  migrate.py  models.py  openweather_api.py  synchronizer.py
