[tool.poetry]
name = "mini_proyecto_next-e"
version = "0.1.0"
description = ""
authors = ["drapaiton <drapaiton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
requests = "^2.26.0"
pandas = "^1.3.1"
pydantic = "^1.8.2"
boto3 = "^1.18.18"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"